--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Página Home</h1>
     <a href="vendas.html">Ir para a página de vendas</a>
-    <a href="blog.htmal">Ir para a página de blogs</a>
+    <h1></h1>
+    <a href="blog.html">Ir para a página de blogs</a>
 </body>
 </html>
