--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="vendas.html">Ir para a página de vendas</a>
     <h1></h1>
     <a href="blog.html">Ir para a página de blogs</a>
+    <h1></h1>
+    <a href="Sobre.html">Ir para a página Sobre Nós</a>
 </body>
 </html>
