--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,9 @@
 <body>
    <h1>Página de Vendas</h1>
    <p>Vendas = R$ 5000,00</p>
+    <h2>Relatório de Vendas</h2>
+    <p>Venda 1</p>
+    <p>Venda 2</p>
     <a href="index.html">Voltar para a página Inicial</a>
 </body>
 </html>
